# calculator_task

./: CMakeLists.txt  README_DesignDoc.md
doc/: DaoAI_Interview_SystemDesign.docx
include/: calculator.hpp  operation.hpp  string_to_number.hpp
src/: calculator.cpp  main.cpp  operation.cpp  string_to_number.cpp
test/: test_functions.cpp
